--- a/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/cvpr_paper_main.tex
@@ -128,8 +128,8 @@
 \author[3]{Tomasz Kornuta}
 \author[ ]{Vincent Albouy\thanks{Work done while at IBM Reseach AI, Almaden Research Center}\hskip -4pt}
 \author[*]{Emre Sevgen}
-\author[1]{Ahmet Ozcan\vspace{-0.3cm}}
-\affil[ ]{$^1$IBM Research AI, Almaden Research Center, San Jose, CA, USA. $^2$IBM Research AI, Thomas J. Watson Research Center, York Town, NY, USA. $^3$NVIDIA, Santa Clara, CA, USA}
+\author[1]{Ahmet Ozcan\vspace{-0.2cm}}
+\affil[ ]{$^1$IBM Research AI, Almaden Research Center, San Jose, CA, USA. $^2$IBM Research AI, Thomas J. Watson Research Center, York Town, NY, USA. $^3$NVIDIA, Santa Clara, CA, USA\vspace{0.1cm}}
 \affil[ ]{\textit {\{jayram,  asozcan\}@us.ibm.com,  \{vincent.marois,vincent.albouy\}@ibm.com, tkornuta@nvidia.com, sesevgen@gmail.com} \vspace{-0.7cm}}
 
 %
