--- a/Transfer_Learning/arxiv_version/related_work.tex
+++ b/Transfer_Learning/arxiv_version/related_work.tex
@@ -1,30 +1,39 @@
-%\section{Related work -- import}
-%Integration of vision and language in deep neural network models allows the system to learn joint representations of objects, concepts, and relations.  Potentially, this approach can lead us towards Harnad's \textit{symbol grounding problem}~\cite{harnad2003symbol} but we are quite far from achieving the full capabilities of visually grounded language learning.
-
-%Recently, there is a growing interest in neuro-symbolic approaches, which can combine the power of representation learning and symbolic logic that is interpretable \cite{mao2019neurosymbolic}. These approaches focus on \textit{symbol manipulation} rather than learning \textit{grounded symbols}.  Furthermore, symbolic priors (e.g., domain knowledge) and integration of logic depend on hand-crafted modules.  In the near term, this direction is certainly promising and can address some of the shortcomings of machine learning (i.e., the lack of explainability)\cite{vedantam2019probabilistic}.  However, in the long run, the desire is to learn grounded representations, which may lead to the emergence of symbols \cite{taniguchi2018symbol}.
-
-%Starting with Image Question Answering~\cite{malinowski2014multi,antol2015} and Image Captioning~\cite{karpathy2015deep}, a variety of tasks that integrate vision and language have appeared in the past several years~\cite{mogadala2019trends}. 
-%Those directions include e.g., Video QA~\cite{MovieQA} and Video Action Recognition~\cite{monfort2019moments}, that provide an additional challenge of understanding \emph{temporal} aspects, and Video Reasoning~\cite{song2018explore,yang2018dataset}, that tackles both spatial (comparison of object attributes, counting and other relational question) and temporal aspects and relations (e.g. object disappearance).
-%To deal with the temporal aspect most studies typically cut the whole video into clips; e.g., in~\cite{song2018explore} the model extracts visual features from each frame and aggregates features first into clips, followed by aggregation over clips to form a single video representation.
-%Still, when reasoning and producing the answer, the system in fact has \textit{access to all frames}. 
-%Similarly, in Visual Dialog~\cite{das2017visual} the system memorizes the whole dialog history.
-%However, in real-time dialog or video monitoring, it is not always possible to keep the entire history of conversation nor all frames from the beginning of the recording.  
-
-
-%As evident from human cognition, attention and memory are the key competencies required to solve these problems, and unsurprisingly, the AI research is rapidly growing in these areas.
-%The ability to deal with temporal casuality can pose a challenge for also in pure natural language processing (NLP) settings, e.g. in question answering (QA) and dialog applications.  
-%Current NLP solutions, in many problem settings, work around this challenge by processing the entire text input and reason over it multiple times using attention \cite{vaswani2017attention} or other mechanisms.
-%For example, typical solutions to the bAbI reasoning task, such as Memory Networks \cite{weston2014memory}, involve processing all the supporting facts at once and keeping them in memory all the time while searching for the answer.
-
-
 \section{Related work}
-Visual Question Answering (VQA)~\cite{malinowski2014multi,antol2015} is a challenging multimodal task that combines vision and language.  Most Image Question Answering datasets and tasks focus on identifying object attributes, counting, and reasoning about their spatial-relations. Prior work generally relied on dense visual features produced by either CNNs~\cite{xiong2016dynamic,yang2016stacked} or object detection modules \cite{desta2018object}, and increasingly, recent models utilize the relationships among objects to augment those features with contextual information from each object’s surroundings \cite{teney2017graph, santoro2017simple}.  
+\label{sec:related_work}
 
-Another research focus area has been multimodal fusion and attention for VQA. For multimodal fusion, earlier methods used concatenation or element-wise multiplication between multimodal features~\cite{zhou2015simple, antol2015}. Others proposed more sophisticated methods such as different approximated bilinear pooling methods to effectively integrate the multimodal features with second-order feature interactions~\cite{fukui2016multimodal, kim2016hadamard}. Attention research in VQA has demonstrated that learning question-guided visual attention on image regions is the most promising approach~\cite{yang2016stacked, chen2015abc, ilievski2016focused}. Visual reasoning tasks such as the CLEVR dataset, also benefit from multi-hop attention and reasoning methods~\cite{hudson2018compositional, song2018explore}. Visualization of attention maps also provides interpretability, which is an increasingly important aspect. The MAC model \cite{hudson2018compositional} is a great example of such an approach. The follow-on model by the same authors~\cite{hudson2019learning}, called Neural State Machine (NSM) takes a slightly different approach and reason over graph structures rather than directly over spatial maps of visual features.  Representing objects in a scene and their relationship as a graph is an obvious choice, which is another growing research direction~\cite{haurilet2019s, teney2017graph, kim2018dynamic}. 
+In Computer Vision, it is now standard practice to pretrain an image encoder (such as VGG~\cite{simonyan2014very} or ResNet~\cite{he2016deep}) on large-scale datasets (such as ImageNet~\cite{deng2009imagenet}), and reuse the weights in unrelated domains and tasks, such as segmentation of cars~\cite{iglovikov2018ternausnet} or Visual Question Answering (VQA) in a medical domain~\cite{kornuta2019leveraging}.
+Such performance improvements are appealing, especially in cases where both the domain (natural vs. medical images) and the task (image classification vs. image segmentation vs VQA) change significantly.
 
-Video question answering, aside from spatial queries, also focuses on questions that require \emph{temporal} reasoning. Early works~\cite{mun2017marioqa, xu2017video, yu2017end} used LSTMs to encode video frames and text queries to leverage temporal attention to selectively attend to essential frames in a video. These approaches might be sufficient for action-recognition type of tasks but fall short when spatio-temporal reasoning is required. Learning long-term dependencies is also another challenge that LSTMs may struggle with. Yin et al.~\cite{yin2019memory} recently proposed a Memory-Augmented Neural Network (MANN) architecture for video QA which leverages the external memory for storing and retrieving useful information in questions and videos and modeling long-term visual-textual dependencies.
+Similar developments have emerged in the Natural Language Processing (NLP) community.
+Using shallow word embeddings, such as word2vec~\cite{mikolov2013distributed} or GloVe~\cite{pennington2014glove}, pretrained on large corpuses from e.g.\ Wikipedia or Twitter, has been a standard procedure across different NLP domains and tasks.
+Recently, there is a clear, growing trend of utilization of deep contextualized word representations such as ELMo~\cite{peters2018deep} (based on bidirectional LSTMs~\cite{hochreiter1997long}) or BERT~\cite{devlin2018bert} (based on the Transformer~\cite{vaswani2017attention} architecture), where entire deep networks (not just the input layer) are pretrained on very large corporas.
+%In analogy to repositories with pretrained image encoders in TensorFlow~\cite{} or PyTorch~\cite{}, the NLP community has also started to create model repositories, some with dozens of pretrained models ready to be downloaded and used. HuggingFace~\cite{wolf2019transformers} is one of the most notable examples.
 
-Our work is mostly related to the MAC~\cite{hudson2018compositional} as well as neural networks with
-external memory~\cite{graves2014neural, graves2016hybrid} that support flexible addressing mechanisms 
-including sequential and content-based addressing. 
-An important distinction of our approach is the frame-by-frame processing of the video input. Prior studies typically divide the whole video into clips; e.g., in~\cite{song2018explore}, the model extracts visual features from each frame and aggregates features first into clips, followed by aggregation over clips to form a single video representation. Nevertheless, when reasoning and producing the answer, the system has \emph{access to all frames}. Similarly, in Visual Dialog~\cite{das2017visual}, the system memorizes the whole dialog history. However, in real-time dialog or video monitoring, it is not always possible to keep the entire history of conversation nor all frames from the beginning of the recording.
+Visual Reasoning tasks, combining both the visual and language modalities~\cite{mogadala2019trends}, naturally draw from those findings by reusing the pretrained image and word/question encoders.
+Ensuring models can generalize on high-level, abstract \emph{reasoning} has been a recent interest of the community.
+The first attempt at establishing a framework enabling transfer learning of reasoning skills was CLEVR~\cite{johnson2017clevr} with its two CoGenT variants.
+This fostered research~\cite{mascharka2018transparency, perez2018film, johnson2017inferring,marois2018transfer}, proposing models designed to transfer from one domain to another, with different distributions of visual attribute combinations.
+Similarly, the baseline model introduced alongside the COG dataset~\cite{yang2018dataset} has shown the ability to solve tasks not explicitly trained on, by leveraging knowledge learned on other tasks.
+
+These results clearly indicate the usefulness of transfer learning, despite the assumption of similar distributions between the source and target domains not being respected.
+Conjointly, transfer learning raises several research questions, such as the characteristics which make a whole dataset or a particular task more favorable to be used in pretraining (notably ImageNet~\cite{huh2016makes}), or regarding the observed performance correlation of models with different architectures between the source and target domains~\cite{kornblith2019better}.
+One of the most systematic works in this area is the computational taxonomic map for task transfer learning~\cite{zamir2018taskonomy}, aiming at discovering the dependencies between twenty-six different computer vision tasks.
+In this work, we extend this idea further and introduce a taxonomy allowing us to isolate and quantify different aspects of visual reasoning.
+%We illustrate it with the two above mentioned CLEVR and COG datasets.
+%The taxonomy enabled us to perform more systematic studies and facilitate comparison between the already existing solutions and the newly introduced SAMNet model.
+
+
+%transfer learning has helped models generalize better to domains with different distributions.
+
+
+%We propose to address this by introducing a taxonomy of transfer learning in visual reasoning, and illustrate it with two visual reasoning datasets.
+
+
+% \tk{The experimental results clearly indicate that transfer learning is helping, despite that the core assumptions on the compatibility/similarity of domains is broken (transfering between domains having similar distribution).
+% We do not understand this fully, thus the need for a more systematic research on that topic emerges.
+% The paper adresses that by introducing a theoretical framework/taxonomy enabling to categorise visual reasoning tasks.
+% As a starting point, we picked two visual reasoning datasets and analyse the achieved results through the prism of the proposed taxonomy.
+% }
+%
+%
+% \tk{after reading that section the reader should end up with a conclusion that: there are no good models for TL in VR and, moreover, the datasets are randomly testing this or that, there is no theoretical framework showing that do they mean/bigger picture is missing}
