Tried resizing figures. Not perfect but ok

--- a/Transfer_Learning/arxiv_version/experiments.tex
+++ b/Transfer_Learning/arxiv_version/experiments.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../img/plots/clevr_baselines.pdf}
+	\includegraphics[width=0.5\textwidth]{../img/plots/clevr_baselines.pdf}
 	\caption{Comparison of SAMNet to baselines on CLEVR.}
 	\label{fig:clevr_baselines}
 \end{figure}
@@ -75,7 +75,7 @@ description of tasks, as shown in~\cref{fig:task-groups}.
 
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=\textwidth]{../img/architecture/hierarchy}
+	\includegraphics[width=0.7\textwidth]{../img/architecture/hierarchy}
 	\caption{Hierarchy of Task Groups in the COG dataset.}
 	\label{fig:task-groups}
 \end{figure}
@@ -112,7 +112,7 @@ We also consider a direct test on CoGenT-A; and a test on CoGenT-A after fine-tu
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{../img/plots/cogent_feature_transfer_baselines.pdf}
+	\includegraphics[width=0.9\textwidth]{../img/plots/cogent_feature_transfer_baselines.pdf}
 	\caption{Feature transfer: test accuracies when transferring between CoGenT-A and CoGenT-B.}
 	\label{fig:CoGenT-B-results}
 \end{figure}
@@ -132,7 +132,7 @@ As the original paper~\cite{yang2018dataset} didn't provide such experiments, we
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{../img/plots/cog_temporal_transfer_baselines.pdf}
+	\includegraphics[width=0.9\textwidth]{../img/plots/cog_temporal_transfer_baselines.pdf}
 	\caption{Temporal transfer capabilities of SAMNet (blue) and baseline models (gray -striped and -dotted) when moving from Canonical to Hard  in COG.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
