--- a/Transfer_Learning/arxiv_version/experiments_reasoning_transfer.tex
+++ b/Transfer_Learning/arxiv_version/experiments_reasoning_transfer.tex
@@ -5,7 +5,7 @@ Using the question groups defined by the authors, we organized training and test
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{../img/plots/cogent_reasoning_transfer.pdf}
+	\includegraphics[width=0.8\textwidth]{../img/plots/cogent_reasoning_transfer.pdf}
 	\caption{Accuracies of SAMNet when testing its reasoning transfer capabilities on the CoGenT-A variant.}
 	\label{fig:cogent_reasoning_transfer}
 \end{figure}
@@ -41,7 +41,7 @@ Please note that these results are weighted averages of the accuracies of our mo
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{../img/plots/cog_reasoning_transfer.pdf}
+	\includegraphics[width=0.8\textwidth]{../img/plots/cog_reasoning_transfer.pdf}
 	\caption{Accuracies of SAMNet when testing its reasoning transfer capabilities on the Canonical variant of COG.}
 	\label{fig:cog_reasoning_transfer}
 \end{figure}
